# gever

./: .dockerignore  .env.example  .gitignore  .venv  .venv-bu  CLAUDE.md  Dockerfile  HANDOVER.md  MORNING_REVIEW.md  README.md  pyproject.toml  roadmap.md  גבר_MVP_Spec.docx
.github/workflows/: pages.yml
Social/: README.md  linkedin-drafts.md  reels-scripts.md  strategy.md  twitter-drafts.md
app/: config.py  live_link.py  main.py  pipeline.py
app/automation/: agent.py  browser_book.py  bu_runner.py  engine.py  ontopo.py  resolve.py  shows_catalog.py
app/db/: memory.py  schema.sql  supabase_client.py
app/llm/: intent.py  recommend.py  transcribe.py
app/models/: schemas.py
app/whatsapp/: client.py
docs/: MARKETING.md  ROADMAP_STATUS.md  ops-coolify.md  ops-tunnel.md  retro-dryrun1.md
docs/marketing/: README.md  brand-voice.md  demo-script.md  design-tokens.md  gtm-plan.md  landing-page.md
docs/plans/: agent.md  availability-aware-recommendations.md  beta-roadmap.md  browseruse-migration.md  business-checklist.md  cinema-vertical.md  convmemory.md  cookie-suppression.md  deliveries-feasibility.md  dryrun2-fixes.md  events-vertical.md  gever-browser.md  handover-2026-07-19.md  handover-2026-07-23.md  insurance-vertical.md  landing-audit.md  livetest-fixes.md  merge-ledger.md  model-compare-results.md  model-compare-runbook.md  multi-platform-resolve.md  nav-baseline-2026-07.md  onboarding.md  osek-patur-2026.md  pause-resume.md  persona-humanization.md  playbook.md  profile.md  qa-hardening-report-2026-07-21.md  realbooking.md  restaurants-rounds.md  router.md  site-fallback.md  speedup-plan.md  verticals-deep-dive-2026-07-23.md
docs/research/: findings.md  stagehand-best-practices.md
poc/: book_ontopo.py  chat.py  convo_eval.py  gever.py  nav_bench.py  ontopo_poc.py  persona_eval.py  qa_persona_workflow.py  recon_ontopo.py  spike_browseruse.py  spike_cinema.py  spike_events.py  spike_insurance.py  spike_speed.py
scripts/: approve_all.py  make_stickers.py  setup-bu.sh  tunnel.sh
tests/: conftest.py  test_access_gate.py  test_agent.py  test_agreed.py  test_alt_dates.py  test_alt_times.py  test_browser_book.py  test_bu_runner.py  test_capability_truth.py  test_card_release.py  test_cinema_pipeline.py  test_conversation_layer.py  test_converse_retry.py  test_convmemory.py  test_customer_in_loop.py  test_debrief_fixes.py  test_deterministic_resume.py  test_dryrun2_fixes.py  test_engine.py  test_events_pipeline.py  test_flow_persistence.py  test_followup.py  test_gender.py  test_heartbeat.py  test_insurance.py  test_keepalive.py  test_leak_emoji_strip.py  test_live_link.py  test_liveview.py  test_memory.py  test_multi_missing.py  test_nudge.py  test_onboarding_flow.py  test_onboarding_seed.py  test_orphan_recovery.py  test_parallel_intake.py  test_pause_resume.py  test_persona_timing.py  test_profile.py  test_realbooking.py  (+11 more)
tests/fixtures/: convo_a.json  convo_b.json
web/: README.md  index.html
