[project]
name = "gever"
version = "0.1.0"
description = "גבר — WhatsApp personal assistant that closes tasks on the web"
requires-python = ">=3.11"

dependencies = [
    # Stage 0 — PoC (browser automation)
    "stagehand>=3.21.0",
    "python-dotenv>=1.0.0",

    # Stage 1 — server + conversation
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "google-genai>=1.0.0",        # unified Google GenAI SDK (Gemini)
    "supabase>=2.9.0",
    "twilio>=9.0.0",              # WhatsApp via Twilio (Sandbox -> production)

    # Stage 2 — security (Lemon Squeezy uses hosted checkout via REST/httpx)
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
