[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gever"
version = "0.1.0"
description = "גבר — WhatsApp personal assistant that closes tasks on the web"
requires-python = ">=3.11"

dependencies = [
    # Stage 0 — PoC (browser automation)
    "python-dotenv>=1.0.0",

    # Stage 1 — server + conversation
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",              # Meta Graph API calls + DDG resolver
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "google-genai>=1.0.0",        # unified Google GenAI SDK (Gemini)

    # Stage 4 — cross-conversation memory (Supabase + PII at rest)
    "cryptography>=43.0.0",      # Fernet — encrypt name/email at rest

    # ponytail: twilio/python-multipart removed — no consumers. Re-add when their arm starts.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
